Add few more programs